# online-market

./: Cargo.toml  README.md
online-market-axum/: Cargo.toml
online-market-axum/src/: handler.rs  main.rs  router.rs  swagger.rs
online-market-axum/src/handler/: category_handler.rs  comment_handler.rs  mod.rs  rate_handler.rs  user_handler.rs
online-market-data/: Cargo.toml
online-market-data/migrations/: 20231031202611_categories.sql  20231101005609_roles.sql  20231101011708_users.sql  20231101031621_modality.sql  20231101031626_service.sql  20231102032152_rates.sql  20231102032159_comments.sql
online-market-data/src/: errors.rs  lib.rs  main.rs
online-market-model/: Cargo.toml
online-market-model/src/: lib.rs
