[package]
name = "online-market-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20" }
axum-macros = "0.3.8"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono" ] }
futures = "0.3.28"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
uuid = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
online-market-model = { path = "../online-market-model" }
online-market-data = { path = "../online-market-data" }
