[package]
name = "online-market-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.190", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid" ] }
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
online-market-model = { path = "../online-market-model" }
utoipa = "4.0.0"