[package]
name = "online-market-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.190", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono" ] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
utoipa = "4.0.0" 

